@@ -12,15 +12,14 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import java.util.List;
-import java.util.stream.Collectors;
 
 // [API-1] ResponseEntity 사용
 import org.springframework.http.ResponseEntity;
 import java.net.URI;
 // [API-2] Valid 어노테이션, BindingResult 사용
 import jakarta.validation.Valid;
-import org.springframework.validation.BindingResult;
-import org.springframework.context.support.DefaultMessageSourceResolvable;
+//import org.springframework.validation.BindingResult;
+//import org.springframework.context.support.DefaultMessageSourceResolvable;
 
 
 @RestController
@@ -33,16 +32,27 @@ public class DiaryController {
         this.diaryService = diaryService;
     }
 
+    // [API-2 메서드]
+//    @PostMapping
+//    public ResponseEntity<?> createDiary(@Valid @RequestBody DiaryRequestDto requestDto, BindingResult bindingResult) {
+//        if (bindingResult.hasErrors()) {
+//            List<String> errors = bindingResult.getAllErrors().stream().map(
+//                    // error -> error.getDefaultMessage()
+//                    DefaultMessageSourceResolvable::getDefaultMessage
+//            ).toList();
+//
+//            return ResponseEntity.badRequest().body(errors);
+//        }
+//
+//        DiaryResponseDto response = diaryService.createDiary(requestDto);
+//
+//        return ResponseEntity.created(
+//                URI.create("/api/diaries/" + response.getId())
+//        ).body(response);
+//    }
+
     @PostMapping
-    public ResponseEntity<?> createDiary(@Valid @RequestBody DiaryRequestDto requestDto, BindingResult bindingResult) {
-        if (bindingResult.hasErrors()) {
-            List<String> errors = bindingResult.getAllErrors().stream().map(
-                    DefaultMessageSourceResolvable::getDefaultMessage
-            ).toList();
-
-            return ResponseEntity.badRequest().body(errors);
-        }
-
+    public ResponseEntity<DiaryResponseDto> createDiary(@Valid @RequestBody DiaryRequestDto requestDto) {
         DiaryResponseDto response = diaryService.createDiary(requestDto);
 
         return ResponseEntity.created(
@@ -55,7 +65,7 @@ public class DiaryController {
         return ResponseEntity.ok(
             diaryService.getDiaries().stream().map(
                 diary -> new DiaryResponseDto(diary.getId(), diary.getTitle(), diary.getContent(), diary.getCreatedDate())
-            ).collect(Collectors.toList())
+            ).toList()
         );
     }
 
@@ -64,15 +74,21 @@ public class DiaryController {
         return ResponseEntity.ok(diaryService.getDiaryById(id));
     }
 
-    @PutMapping("/{id}")
-    public ResponseEntity<?> updateDiary(@PathVariable Long id, @Valid @RequestBody DiaryRequestDto requestDto, BindingResult bindingResult) {
-        if (bindingResult.hasErrors()) {
-            List<String> errors = bindingResult.getAllErrors().stream().map(
-                    DefaultMessageSourceResolvable::getDefaultMessage
-            ).toList();
+    // [API-2 메서드]
+//    @PutMapping("/{id}")
+//    public ResponseEntity<?> updateDiary(@PathVariable Long id, @Valid @RequestBody DiaryRequestDto requestDto, BindingResult bindingResult) {
+//        if (bindingResult.hasErrors()) {
+//            List<String> errors = bindingResult.getAllErrors().stream().map(
+//                    DefaultMessageSourceResolvable::getDefaultMessage
+//            ).toList();
+//
+//            return ResponseEntity.badRequest().body(errors);
+//        }
+//        return ResponseEntity.ok(diaryService.updateDiary(id, requestDto));
+//    }
 
-            return ResponseEntity.badRequest().body(errors);
-        }
+    @PutMapping("/{id}")
+    public ResponseEntity<DiaryResponseDto> updateDiary(@PathVariable Long id, @Valid @RequestBody DiaryRequestDto requestDto) {
         return ResponseEntity.ok(diaryService.updateDiary(id, requestDto));
     }
 
